<resources>
    <string name="app_name">alexandria</string>
    <string name="title_books">Books</string>
    <string name="title_audiobooks">Audiobooks</string>
    <string name="title_comics">Comics</string>
    <string name="title_favorites">Favorites</string>
    <string name="titlebar_menu_credits">Credits</string>
    <string name="titlebar_menu_settings">Settings</string>
    <string name="titlebar_menu_search">Search</string>
    <string name="cardview_title">Title</string>
    <string name="cardview_author">Author</string>
    <string name="cardview_genre">Genre</string>
    <string name="ToastMsgStoragePermissionDenied">Permissions Denied, app cannot work</string>
</resources>