<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorites">

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.swgroup.alexandria.ui.fragments.BookFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_audiobooks"
        android:name="com.swgroup.alexandria.ui.fragments.AudiobookFragment"
        android:label="@string/title_audiobooks"
        tools:layout="@layout/fragment_audiobook" />

    <fragment
        android:id="@+id/navigation_comics"
        android:name="com.swgroup.alexandria.ui.fragments.ComicFragment"
        android:label="@string/title_comics"
        tools:layout="@layout/fragment_comic" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.swgroup.alexandria.ui.fragments.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite"/>
</navigation>