<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.swgroup.alexandria.MainActivity">

    <item
        android:id="@+id/toolbar_menu_credits"
        android:orderInCategory="100"
        android:title="@string/titlebar_menu_credits"
        android:icon="@drawable/ic_toolbar_submenu_credits_24"/>

    <item
        android:id="@+id/toolbar_menu_settings"
        android:orderInCategory="100"
        android:title="@string/titlebar_menu_settings"
        android:icon="@drawable/ic_toolbar_submenu_settings_24"/>

    <item
        android:id="@+id/toolbar_menu_search"
        android:title="@string/titlebar_menu_search"
        android:icon="@drawable/ic_toolbar_search_24"
        app:showAsAction="always" />

</menu>