<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:id="@+id/card_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cardview_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:ellipsize="end">
        </TextView>

        <TextView
            android:id="@+id/card_text_view_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_text_view_title"
            android:layout_alignParentStart="true"
            android:text="@string/cardview_author"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ellipsize="end">
        </TextView>

        <TextView
            android:id="@+id/card_text_view_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_text_view_author"
            android:layout_alignParentStart="true"
            android:text="@string/cardview_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ellipsize="end">
        </TextView>

        <ImageView
            android:id="@+id/card_image_view_cover"
            android:layout_below="@+id/card_text_view_title"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentEnd="true">
        </ImageView>



    </RelativeLayout>



</androidx.cardview.widget.CardView>